--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "@vuepic/vue-datepicker": "^11.0.2",
     "dayjs": "^1.11.13",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
